[project]
name = "интернет-магазин"
version = "0.1.0"
description = ""
authors = [
    {name = "Денис",email = "ваш_email@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
